<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Grape</string>
    <string name="action_settings">Settings</string>

    <!-- 首页 -->
    <string name="home_page">首页</string>
    <!-- 分类 -->
    <string name="classify">分类</string>
    <!-- 发现 -->
    <string name="find">发现</string>
	    <!-- 数据库测试 -->
	    <string name="database">数据库</string>
	    <string name="db_grapename">grape名称</string>
	    <string name="db_grapeDescription">grape简介</string>
    	<string name="database_add">添加</string>
    	<string name="database_update">更新</string>
    	<string name="database_delete">删除</string>
    	<!-- dialog测试 -->
    	<string name="dialog">dialog</string>
    	<string name="progressDialog">progressDialog</string>
    <!-- 我的 -->
    <string name="mine">我的</string>
</resources>
