<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/find" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/editview_bg" />

    <com.doubleC.grape.common.view.FlowLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_h4" >

        <Button
            android:id="@+id/find_db"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/database" />

        <Button
            android:id="@+id/find_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog" />

        <Button
            android:id="@+id/find_progressDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/progressDialog" />
        <Button
            android:id="@+id/find_url_regex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="url" />
    </com.doubleC.grape.common.view.FlowLayout>

</LinearLayout>