<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <EditText
        android:id="@+id/database_edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/db_grapename"
        android:layout_marginTop="@dimen/margin_h10"
        />
    <EditText
        android:id="@+id/database_edit_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/db_grapeDescription"
        android:layout_marginTop="@dimen/margin_h10"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        >
        <TextView 
            android:id="@+id/database_test1_add"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/database_add"
            android:textColor="@color/blcak"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            />
        <TextView 
            android:id="@+id/database_test1_update"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/database_update"
            android:textColor="@color/blcak"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            />
        <TextView 
            android:id="@+id/database_test1_delete"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/database_delete"
            android:textColor="@color/blcak"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            />
    </LinearLayout>
    <ListView 
        android:id="@+id/database_listView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ></ListView>
</LinearLayout>
