<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <FrameLayout 
        android:id="@+id/contain"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        ></FrameLayout>
    <View 
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_gray"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:baselineAligned="true"
        >
        <LinearLayout
            android:id="@+id/home"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            >
            <TextView 
                android:id="@+id/home_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/home_page"
                android:gravity="center"
                android:textSize="@dimen/h5"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/classify"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            >
            <TextView 
                android:id="@+id/classify_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/classify"
                android:gravity="center"
                android:textSize="@dimen/h5"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/find"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            >
            <TextView 
                android:id="@+id/find_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/find"
                android:gravity="center"
                android:textSize="@dimen/h5"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/mine"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            >
            <TextView 
                android:id="@+id/mine_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/mine"
                android:gravity="center"
                android:textSize="@dimen/h5"
                />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
